[package]
name = "reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
poise = "0.5.7"
redis = { version = "0.23.0", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6.20", features = ["headers"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
http = "0.2"
[profile.release]
incremental = true